# QRCode-NCNN

./: README.md
Project_android/ncnn-android-nanodet/app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodetncnn.cpp  ndkcamera.h  wechat_qrcode.cpp  wechat_qrcode.hpp
Project_android/ncnn-android-nanodet/app/src/main/jni/detector/: ssd_detector.cpp  ssd_detector.hpp
Project_android/ncnn-android-nanodet/app/src/main/jni/ncnn-20210525-android-vulkan/arm64-v8a/include/ncnn/: platform.h
Project_android/ncnn-android-nanodet/app/src/main/jni/ncnn-20210525-android-vulkan/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
Project_android/ncnn-android-nanodet/app/src/main/jni/ncnn-20210525-android-vulkan/armeabi-v7a/lib/cmake/: OSDependentTargets.cmake
Project_android/ncnn-android-nanodet/app/src/main/jni/ncnn-20210525-android-vulkan/x86/include/ncnn/: layer_shader_type_enum.h
Project_android/ncnn-android-nanodet/app/src/main/jni/ncnn-20210525-android-vulkan/x86_64/include/ncnn/: platform.h
Project_android/ncnn-android-nanodet/app/src/main/jni/ncnn-20210525-android-vulkan/x86_64/lib/cmake/: SPIRVTargets.cmake
Project_android/ncnn-android-nanodet/app/src/main/jni/opencv-mobile-4.5.1-android/sdk/native/jni/: OpenCVConfig.cmake
Project_android/ncnn-android-nanodet/app/src/main/jni/opencv-mobile-4.5.1-android/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Project_android/ncnn-android-nanodet/app/src/main/jni/scale/: super_scale.cpp  super_scale.hpp
Project_android/ncnn-android-nanodet/app/src/main/res/layout/: main.xml
(+18 files in other folders)
